@@ -1,7 +1,9 @@
 """Test non-minimization recognition"""
+import urllib
 
 from nose.tools import eq_
 
+from routes import url_for
 from routes.mapper import Mapper
 
 
@@ -111,3 +113,32 @@ def test_regexp_syntax():
     eq_(None, m.generate(controller='content', id=4))
     eq_('/content/index/43', m.generate(controller='content', id=43))
     eq_('/content/view/31', m.generate(controller='content', action='view', id=31))
+
+def test_unicode():
+    hoge = u'\u30c6\u30b9\u30c8' # the word test in Japanese
+    hoge_enc = urllib.quote(hoge.encode('utf-8'))
+    m = Mapper()
+    m.minimization = False
+    m.connect(':hoge')
+    eq_("/%s" % hoge_enc, m.generate(hoge=hoge))
+    assert isinstance(m.generate(hoge=hoge), str)
+
+def test_unicode_static():
+    hoge = u'\u30c6\u30b9\u30c8' # the word test in Japanese
+    hoge_enc = urllib.quote(hoge.encode('utf-8'))
+    m = Mapper()
+    m.minimization = False
+    m.connect('google-jp', 'http://www.google.co.jp/search', _static=True)
+    m.create_regs(['messages'])
+    eq_("http://www.google.co.jp/search?q=" + hoge_enc,
+                     url_for('google-jp', q=hoge))
+    assert isinstance(url_for('google-jp', q=hoge), str)
+
+def test_other_special_chars():
+    m = Mapper()
+    m.minimization = False
+    m.connect('/:year/:(slug).:(format),:(locale)', locale='en', format='html')
+    m.create_regs(['content'])
+    
+    assert '/2007/test.xml,ja' == m.generate(year=2007, slug='test', format='xml', locale='ja')
+    assert None == m.generate(year=2007, format='html')
