@@ -2,6 +2,8 @@ Routes Changelog
 ========================
 
 -- 1.10.2 (**tip**)
+* Bugfix for unicode encoding problems with non-minimized Route generation.
+  Spotted by Wichert Akkerman.
 * Bugfix for when environ is {} in unit tests.
 
 -- 1.10.1 (September 27, 2008)
